[tool.poetry]
name = "model-complex-ia"
version = "0.1.0"
description = "model super complex ia"
authors = ["Telmo telmofaria23@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
keras-tuner = "^1.4.7"
scikit-learn = "^1.5.1"
tensorflow = "^2.17.0"
numpy = "^1.26.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"